Purple: find significant germline amplifications.